<resources>
    <string name="app_name">Pocket Web</string>
    <string name="enterURL">Enter URL</string>
    <string name="go_btn">Go</string>
    <string name="settings_btn">Settings</string>
    <string name="search_hint">Search</string>
    <string name="save">Save</string>
    <string name="desktop">Desktop</string>
    <string name="bookmark">Bookmark</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="fullscreen">Full-Screen</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="view_all">View all</string>
    <string name="all_bookmarks">All Bookmarks</string>
    <string name="refresh_btn">Refresh</string>
    <string name="one">1</string>
</resources>