<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/webIcon"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_search">
            </com.google.android.material.imageview.ShapeableImageView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topSearchBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/enterURL"
                android:singleLine="true"
                android:layout_marginStart="6dp"
                android:inputType="textWebEmailAddress"
                android:layout_weight="1"
                android:background="@drawable/custom_design">
            </com.google.android.material.textfield.TextInputEditText>

            <ImageButton
                android:id="@+id/goBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_forward"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/go_btn">
            </ImageButton>

        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.5"
            android:visibility="gone">
        </com.google.android.material.progressindicator.LinearProgressIndicator>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.5"
            android:visibility="gone">
        </com.google.android.material.progressindicator.LinearProgressIndicator>
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings_btn"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>